--- a/index.html
+++ b/index.html
@@ -1,125 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Financial News Newsletter</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chintu Finance</title>
   <style>
-  body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  max-width: 800px;
-  margin: 40px auto;
-  padding: 20px;
-  background: #121212;
-  color: #e0e0e0;
-  box-shadow: 0 0 15px rgba(0,0,0,0.3);
-  border-radius: 10px;
-}
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-h1 {
-  text-align: center;
-  color: #90caf9;
-  margin-bottom: 30px;
-  font-weight: 700;
-  font-size: 2.5em;
-  text-shadow: 0 0 10px #90caf9;
-}
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+    }
 
-.news-item {
-  border-bottom: 1px solid #333;
-  padding: 15px 0;
-  transition: background 0.3s ease;
-  cursor: pointer;
-  border-radius: 5px;
-}
+    header {
+      background-color: #004080;
+      color: white;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-.news-item:hover {
-  background: #1e88e5;
-  color: white;
-  box-shadow: 0 4px 8px rgba(33, 150, 243, 0.5);
-}
+    header h1 {
+      font-size: 1.8rem;
+    }
 
-.news-item a {
-  color: inherit;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 1.2em;
-}
+    nav a {
+      color: white;
+      margin-left: 1.5rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-.news-item a:hover {
-  text-decoration: underline;
-}
+    nav a:hover {
+      text-decoration: underline;
+    }
 
-.date {
-  color: #90caf9;
-  font-size: 0.9em;
-  margin-top: 4px;
-}
+    main {
+      padding: 2rem;
+    }
 
-#loading {
-  text-align: center;
-  font-size: 1.4em;
-  color: #90caf9;
-  margin-top: 40px;
-}
+    .section-title {
+      font-size: 1.4rem;
+      margin-bottom: 1rem;
+      color: #333;
+    }
+
+    .news-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 1.5rem;
+    }
+
+    .news-card {
+      background: white;
+      border-radius: 8px;
+      padding: 1rem;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .news-card h3 {
+      font-size: 1.1rem;
+      color: #004080;
+    }
+
+    .news-card a {
+      text-decoration: none;
+      color: #004080;
+    }
+
+    .news-card a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #004080;
+      color: white;
+      margin-top: 2rem;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Financial News - India</h1>
-  <div id="news"></div>
-  <div id="loading">Loading news...</div>
+  <header>
+    <h1>Chintu Finance</h1>
+    <nav>
+      <a href="#india">India</a>
+      <a href="#us">US</a>
+      <a href="#asia">Asia</a>
+      <a href="#europe">Europe</a>
+      <a href="#crypto">Crypto</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2 class="section-title">Top Financial Headlines</h2>
+      <div class="news-container" id="news">
+        <!-- News articles will be injected here by JS -->
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 Chintu Finance - Built with ❤️ using GitHub Pages
+  </footer>
 
   <script>
-    const apiKey = "pub_f1b94a0af239455b9d6b8c8197720de0"
-    const apiUrl = `https://newsdata.io/api/1/news?apikey=${apiKey}&country=in&category=business`;
+    const newsContainer = document.getElementById('news');
+    const apiKey = 'demo'; // Replace with your actual API key from NewsData.io or other
 
     async function fetchNews() {
-      try {
-        const response = await fetch(apiUrl);
-        if (!response.ok) {
-          throw new Error("Network response was not ok");
-        }
-        const data = await response.json();
-        displayNews(data.results);
-      } catch (error) {
-        document.getElementById("loading").textContent = "Failed to load news.";
-        console.error("Error fetching news:", error);
-      }
-    }
+      const res = await fetch(`https://newsdata.io/api/1/news?apikey=${apiKey}&language=en&country=in,us&category=business,top`);
+      const data = await res.json();
 
-    function displayNews(newsItems) {
-      const newsDiv = document.getElementById("news");
-      newsDiv.innerHTML = "";
-      if (!newsItems || newsItems.length === 0) {
-        newsDiv.innerHTML = "<p>No news found.</p>";
-        return;
-      }
+      newsContainer.innerHTML = '';
 
-      newsItems.sort((a, b) => new Date(b.pubDate) - new Date(a.pubDate));
-
-      newsItems.forEach(item => {
-        const newsEl = document.createElement("div");
-        newsEl.classList.add("news-item");
-
-        const link = document.createElement("a");
-        link.href = item.link;
-        link.target = "_blank";
-        link.textContent = item.title;
-
-        const date = document.createElement("div");
-        date.classList.add("date");
-        date.textContent = new Date(item.pubDate).toLocaleString();
-
-        newsEl.appendChild(link);
-        newsEl.appendChild(date);
-        newsDiv.appendChild(newsEl);
+      data.results.forEach(article => {
+        const card = document.createElement('div');
+        card.className = 'news-card';
+        card.innerHTML = `
+          <h3><a href="${article.link}" target="_blank">${article.title}</a></h3>
+          <p>${article.pubDate}</p>
+        `;
+        newsContainer.appendChild(card);
       });
-
-      document.getElementById("loading").style.display = "none";
     }
 
     fetchNews();
   </script>
+
 </body>
 </html>
