--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chintu Finance</title>
+  <title>Finance Space</title>
   <style>
     * {
       box-sizing: border-box;
@@ -109,7 +109,7 @@
   </main>
 
   <footer>
-    &copy; 2025 Chintu Finance - Built with ❤️ using GitHub Pages
+    &copy; 2025 Finance Space - Built with ❤️ using GitHub Pages
   </footer>
 
   <script>
