Update finance news letter.html

--- a/finance news letter.html
+++ b/finance news letter.html
@@ -89,7 +89,7 @@
 <body>
 
   <header>
-    <h1>Chintu Finance</h1>
+    <h1>Finance Space</h1>
     <nav>
       <a href="#india">India</a>
       <a href="#us">US</a>
