--- a/index.html
+++ b/index.html
@@ -41,48 +41,39 @@
     }
 
     main {
-      padding: 2rem;
-    }
+    <main>
+  <section id="top">
+    <h2 class="section-title">Top Financial Headlines</h2>
+    <div class="news-container" id="news">
+      <!-- News articles will be injected here by JS -->
+    </div>
+  </section>
 
-    .section-title {
-      font-size: 1.4rem;
-      margin-bottom: 1rem;
-      color: #333;
-    }
+  <section id="india">
+    <h2 class="section-title">🇮🇳 India News</h2>
+    <div class="news-container" id="news-india"></div>
+  </section>
 
-    .news-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 1.5rem;
-    }
+  <section id="us">
+    <h2 class="section-title">🇺🇸 US News</h2>
+    <div class="news-container" id="news-us"></div>
+  </section>
 
-    .news-card {
-      background: white;
-      border-radius: 8px;
-      padding: 1rem;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    }
+  <section id="asia">
+    <h2 class="section-title">🌏 Asia News</h2>
+    <div class="news-container" id="news-asia"></div>
+  </section>
 
-    .news-card h3 {
-      font-size: 1.1rem;
-      color: #004080;
-    }
+  <section id="europe">
+    <h2 class="section-title">🇪🇺 Europe News</h2>
+    <div class="news-container" id="news-europe"></div>
+  </section>
 
-    .news-card a {
-      text-decoration: none;
-      color: #004080;
-    }
-
-    .news-card a:hover {
-      text-decoration: underline;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #004080;
-      color: white;
-      margin-top: 2rem;
+  <section id="crypto">
+    <h2 class="section-title">💰 Crypto News</h2>
+    <div class="news-container" id="news-crypto"></div>
+  </section>
+</main>
     }
   </style>
 </head>
