--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <body>
 
   <header>
-    <h1>Finance Space</h1>
+    <h1><a href="#" onclick="location.reload();">Finance Space</a></h1>
     <nav>
       <a href="#india">India</a>
       <a href="#us">US</a>
