--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
     header h1 {
       font-size: 1.8rem;
     }
+    header h1 a {
+      color: white;
+      text-decoration: none;
+    }
+
+    header h1 a:hover {
+      text-decoration: underline;
+    }
 
     nav a {
       color: white;
