--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
       font-size: 1.8rem;
     }
     header h1 a {
-      color: white;
+      color: inherit;
       text-decoration: none;
-    }
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+   }
 
-    header h1 a:hover {
-      text-decoration: underline;
-    }
+   header h1 a:hover {
+     text-decoration: underline;
+   }
+
 
     nav a {
       color: white;
