--- a/index.html
+++ b/index.html
@@ -43,7 +43,43 @@
    header h1 a:hover {
      text-decoration: underline;
    }
+   header {
+    position: sticky;
+    top: 0;
+    z-index: 999;
+   }
 
+   @media (max-width: 768px) {
+    header {
+      flex-direction: column;
+      align-items: flex-start;
+   }
+
+   nav {
+     display: flex;
+     flex-wrap: wrap;
+     gap: 0.5rem;
+     margin-top: 0.5rem;
+   }
+
+   nav a {
+     margin-left: 0;
+     margin-right: 1rem;
+   }
+
+   main {
+     padding: 1rem;
+   }
+
+   .news-card {
+     font-size: 0.9rem;
+   }
+
+   .section-title {
+     font-size: 1.2rem;
+   }
+ }
+ 
 
     nav a {
       color: white;
