--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
+
 
     header h1 {
       font-size: 1.8rem;
