--- a/index.html
+++ b/index.html
@@ -191,48 +191,65 @@
     &copy; 2025 Finance Space - Built with ❤️ using GitHub Pages
   </footer>
 
-  <script>
-    const API_KEY = 'pub_f1b94a0af239455b9d6b8c8197720de0'; // Replace with your real API key
+<script>
+  const API_KEY = 'pub_f1b94a0af239455b9d6b8c8197720de0'; // Replace with your key
 
-    const regions = [
-      { id: 'news', query: 'top' }, // Top headlines
-      { id: 'news-india', country: 'in' },
-      { id: 'news-us', country: 'us' },
-      { id: 'news-asia', country: 'cn,jp,sg,id,ae,sa,kr' }, // Asia region
-      { id: 'news-europe', country: 'de,fr,it,gb,es,nl' }, // Europe region
-      { id: 'news-crypto', category: 'cryptocurrency' }
-   ];
-
-   async function fetchNews({ id, country, category, query = 'business' }) {
-     let url = `https://newsdata.io/api/1/news?apikey=${API_KEY}&language=en`;
-
-     if (country) url += `&country=${country}`;
-     if (category) url += `&category=${category}`;
-     if (query && !category) url += `&category=${query}`;
-
-     try {
-       const res = await fetch(url);
-       const data = await res.json();
-
-       const container = document.getElementById(id);
-       container.innerHTML = '';
-
-       data.results?.forEach(article => {
-         const card = document.createElement('div');
-         card.className = 'news-card';
-         card.innerHTML = `
-           <h3><a href="${article.link}" target="_blank">${article.title}</a></h3>
-           <p>${new Date(article.pubDate).toLocaleString()}</p>
-         `;
-          container.appendChild(card);
-        });
-      } catch (err) {
-        console.error(`Failed to load news for ${id}`, err);
-      }
+  const regions = [
+    { id: 'news', query: 'top' }, // Top headlines
+    { id: 'news-india', country: 'in' },
+    { id: 'news-us', country: 'us' },
+    {
+      id: 'news-asia',
+      country: 'cn,jp,in,id,sg,my,th,vn,kr,bd,pk,ae,sa'
+    },
+    {
+      id: 'news-europe',
+      country: 'de,fr,it,gb,es,nl,se,no,fi,pl,cz,ch,at'
+    },
+    {
+      id: 'news-crypto',
+      category: 'cryptocurrency'
     }
+  ];
+
+  async function fetchNews({ id, country, category, query = 'business' }) {
+    let url = `https://newsdata.io/api/1/news?apikey=${API_KEY}&language=en`;
+
+    if (country) url += `&country=${country}`;
+    if (category) url += `&category=${category}`;
+    if (query && !category) url += `&category=${query}`;
+
+    try {
+      const res = await fetch(url);
+      const data = await res.json();
+
+      const container = document.getElementById(id);
+      container.innerHTML = '';
+
+      if (!data.results || data.results.length === 0) {
+        container.innerHTML = `<p>No news found. Try again later.</p>`;
+        return;
+      }
+
+      data.results.forEach(article => {
+        const card = document.createElement('div');
+        card.className = 'news-card';
+        card.innerHTML = `
+          <h3><a href="${article.link}" target="_blank">${article.title}</a></h3>
+          <p>${new Date(article.pubDate).toLocaleString()}</p>
+        `;
+        container.appendChild(card);
+      });
+    } catch (err) {
+      console.error(`❌ Failed to load news for ${id}:`, err);
+      document.getElementById(id).innerHTML =
+        '<p>Error loading news. Please try again later.</p>';
+    }
+  }
 
   // Call fetchNews for all regions
-    regions.forEach(region => fetchNews(region));
-  </script>
+  regions.forEach(region => fetchNews(region));
+</script>
+
 </body>
 </html>
