--- a/index.html
+++ b/index.html
@@ -226,19 +226,23 @@
       const container = document.getElementById(id);
       container.innerHTML = '';
 
-      if (!data.results || data.results.length === 0) {
-        container.innerHTML = `<p>No news found. Try again later.</p>`;
-        return;
-      }
+   if (!data.results || data.results.length === 0) {
+     const errorCard = document.createElement('div');
+     errorCard.className = 'news-card';
+     errorCard.innerHTML = `<p>No news found for this section right now. Please check back later.</p>`;
+     container.appendChild(errorCard);
+   } else {
+     data.results.forEach(article => {
+       const card = document.createElement('div');
+       card.className = 'news-card';
+       card.innerHTML = `
+         <h3><a href="${article.link}" target="_blank">${article.title}</a></h3>
+         <p>${new Date(article.pubDate).toLocaleString()}</p>
+       `;
+      container.appendChild(card);
+    });
+   }
 
-      data.results.forEach(article => {
-        const card = document.createElement('div');
-        card.className = 'news-card';
-        card.innerHTML = `
-          <h3><a href="${article.link}" target="_blank">${article.title}</a></h3>
-          <p>${new Date(article.pubDate).toLocaleString()}</p>
-        `;
-        container.appendChild(card);
       });
     } catch (err) {
       console.error(`❌ Failed to load news for ${id}:`, err);
