--- a/index.html
+++ b/index.html
@@ -196,14 +196,18 @@
   const gnewsAPI = 'c22aa4e5b3154001c857762ecd73d7ff';
   const mediastackAPI = '4e4537e9a8cbcde4a88979ed2ffc691f';
   const finnhubAPI = 'd12jnq1r01qmhi3j2sogd12jnq1r01qmhi3j2sp0';
+  const newsapi: 'abcdaac9869847b9aeea09a320ae6c61',
+    
+  const API_KEYS = {
+    newsapi: 'abcdaac9869847b9aeea09a320ae6c61', // Replace with your actual NewsAPI key
+    mediastack: '4e4537e9a8cbcde4a88979ed2ffc691f'
+  };
 
   const regions = [
-    { id: 'news', query: 'top' },
-    { id: 'news-india', country: 'in' },
-    { id: 'news-us', country: 'us' },
-    { id: 'news-asia', country: 'cn,jp,in,id,sg,my,th,vn,kr,bd,pk,ae,sa' },
-    { id: 'news-europe', country: 'de,fr,it,gb,es,nl,se,no,fi,pl,cz,ch,at' }
-    // ❌ Do NOT add crypto here – it's now handled separately
+    { id: 'news-india', countries: ['in'], category: 'business' },
+    { id: 'news-us', countries: ['us'], category: 'business' },
+    { id: 'news-asia', keywords: ['asia finance', 'asia business'], category: 'business' },
+    { id: 'news-europe', keywords: ['europe finance', 'europe business'], category: 'business' }
   ];
 
   async function fetchNews({ id, country, query = 'business' }) {
